--- a/flexbox.html
+++ b/flexbox.html
@@ -11,6 +11,9 @@
     <div class="container">
         <div class="box box1">one :)</div>
         <div class="box box2">two :P</div>
-        
+        <div class="box box3">three :P</div>
+        <div class="box box4">four :P</div>
+        <div class="box box5">five :P</div>
+        <div class="box box6">six :P</div>
 </body>
 </html>
